# Learn_GTK

./: .gitignore
01-first-applications/: CMakeLists.txt
01-first-applications/.cache/clangd/index/: includes.h.E8A45CE86A1AB4D8.idx  main.cpp.2C5E5E852511B17E.idx
01-first-applications/src/: includes.h  main.cpp
02-contaianer-widgets/: CMakeLists.txt
02-contaianer-widgets/.cache/clangd/index/: includes.h.8FD2602A81AA750F.idx  includes.h.E8A45CE86A1AB4D8.idx  main.cpp.2C5E5E852511B17E.idx  main.cpp.DF73BB4099FF31EF.idx  main.cpp.FB2B3D9AC3B484AB.idx
02-contaianer-widgets/src/: main.cpp
03-basic-widgets/: CMakeLists.txt
03-basic-widgets/.cache/clangd/index/: main.cpp.27E0B3DFB51319C4.idx  main.cpp.551EBFE115DA27CB.idx
03-basic-widgets/src/: main.cpp
04-dialogs/: CMakeLists.txt
04-dialogs/.cache/clangd/index/: main.cpp.6C189D6A37B5E8AA.idx
04-dialogs/src/: main.cpp
contaianer-widgets-rs-02/: Cargo.toml
contaianer-widgets-rs-02/src/: main.rs
first-applications-rs-01/: Cargo.toml
first-applications-rs-01/src/: main.rs
